fix: gap

--- a/assets/section-suggestions.css
+++ b/assets/section-suggestions.css
@@ -12,7 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 24px;
+  gap: 22px;
   margin-top: 35px;
 }
 
@@ -34,6 +34,6 @@
   }
 
   .list-suggestions-products {
-    gap: 12px;
+    gap: 10px;
   }
 }
